Increase validity period of Octavia CA and certificates
Current validity period of Octavia CA and certificates is one year, this
is too short for cloud deployments: Octavia services can no longer
control a load balancer that has been running for more than one year
(dataplane still works, but cannot be configured).

This commit defines these values:
- Octavia CA validity period is 50 years.
- Octavia client certificate validity period is 10 years.

For existing deployment, the existing CA private key is fetched from
controllers, is updated using AES256 cipher if needed, then the key is
used to generate a new CA. Using an existing private key for this CA
allows to keep compability with existing client certificates.

Change-Id: I435c86306ecd5e0cafeda9d8d468483b7a34f040
Related-Bug: #1869203
(cherry picked from commit 0f168dc9ca5b01fe616f196c2f49001d7882a2c8)
(cherry picked from commit f69dfefd055642f0fddfdf5e4bf910dbf98dea40)
Note-Queens: cherry picked from tripleo-ansible/stein
(cherry picked from commit f09b55266feffc4b25dd386575e7a78be4d15f42)

--- a/playbooks/roles/octavia-controller-check/tasks/main.yml
+++ b/playbooks/roles/octavia-controller-check/tasks/main.yml
@@ -30,6 +30,19 @@
     - name: Store CA data
       set_fact:
         ca_cert: "{{ ca_file_data.content | b64decode }}"
+
+    - name: Get remaining validity period of the CA
+      shell: |
+        now=$(date +%s)
+        enddate=$(date +%s -d "$(openssl x509 -enddate -noout -in {{ octavia_confd_prefix }}/{{ ca_cert_path }} | cut -d= -f2)")
+        echo $((enddate - now))
+      register: validity_period
+
+    - name: Force CA update if remaining validity is less than 1 year
+      set_fact:
+        force_certs_update: true
+      when:
+        - (validity_period.stdout| int) < 31622400  # 31622400 seconds == 366 days
   when:
     - ca_file_stat.stat.exists | bool
 
@@ -46,9 +59,20 @@
       slurp:
         src: "{{ octavia_confd_prefix }}/{{ ca_private_key_path }}"
       register: key_file_data
-    - name: Store CA data
+    - name: Store CA private key
       set_fact:
         ca_private_key: "{{ key_file_data.content | b64decode }}"
+
+    - name: Detect if key is encrypted with AES256
+      shell: grep -q 'AES-256-CBC' {{ octavia_confd_prefix }}/{{ ca_private_key_path }}
+      failed_when: false
+      register: ca_private_key_aes_256
+    - name: Store flag if a private key update is required
+      set_fact:
+        force_private_key_update: true
+        force_certs_update: true
+      when:
+        - ca_private_key_aes_256.rc != 0
   when:
     - ca_key_file_stat.stat.exists | bool
 
