Include virt-admin in the nova_libvirt container
This is required to alter the libvirt logging level at runtime.

Change-Id: I9c9351d5f86c7f4eac4e5042dae82c10a7011e96

--- a/container-images/tcib/base/os/nova-base/nova-libvirt/nova-libvirt.yaml
+++ b/container-images/tcib/base/os/nova-base/nova-libvirt/nova-libvirt.yaml
@@ -10,6 +10,7 @@ tcib_packages:
   - libcgroup-tools
   - libguestfs
   - libseccomp
+  - libvirt-admin
   - libvirt-client
   - libvirt-daemon
   - libvirt-daemon-config-nwfilter
