Include virt-admin in the nova_libvirt container
This is required to alter the libvirt logging level at runtime.

Change-Id: I9c9351d5f86c7f4eac4e5042dae82c10a7011e96
(cherry picked from commit 1c0af4466f5d59dbf99b46359f2bb9ff854a9b4e)

--- a/container-images/tcib/base/os/nova-base/nova-libvirt/nova-libvirt.yaml
+++ b/container-images/tcib/base/os/nova-base/nova-libvirt/nova-libvirt.yaml
@@ -9,6 +9,7 @@ tcib_packages:
   - libcgroup-tools
   - libguestfs
   - libseccomp
+  - libvirt-admin
   - libvirt-client
   - libvirt-daemon
   - libvirt-daemon-config-nwfilter
