TCIB: move RHEL modules into base image
Moving the RHEL modules management into the base image will make it
so we will have shared and consistent modules across all container
images; and also configurable from a central place, the base.yaml.

Also, allow to find the module versions from the
{{ tcib_rhel_modules }} variable so later in tripleoclient we can
override the modules versions from the CLI with a new --rhel-modules
argument (which will take comma separated list of modules and their
versions).

Change-Id: I782cbfd3c88b30c801961c6d8ba875d36f59bf42
(cherry picked from commit 640b76608d8194ccbecc77429bca711f37809400)

--- a/container-images/tcib/base/base.yaml
+++ b/container-images/tcib/base/base.yaml
@@ -12,6 +12,7 @@ tcib_actions:
     crudini --set /etc/dnf/dnf.conf main plugins 1 &&
     crudini --set /etc/dnf/dnf.conf main skip_missing_names_on_install False &&
     crudini --set /etc/dnf/dnf.conf main tsflags nodocs
+- run: if [ '{{ tcib_distro }}' == 'rhel' ]; then {% for item in tcib_packages.modules %}{% set key, value = (item.items() | list).0 %}dnf module -y {{ key }} {{ value }}; {% endfor %}fi
 - copy: /usr/share/tripleo-common/container-images/kolla/base/uid_gid_manage.sh /usr/local/bin/uid_gid_manage
 - run: chmod 755 /usr/local/bin/uid_gid_manage
 - run: bash /usr/local/bin/uid_gid_manage kolla hugetlbfs libvirt qemu
@@ -54,4 +55,11 @@ tcib_packages:
   - sudo
   - tar
   - util-linux-user
+  modules:
+  - disable: container-tools:rhel8
+  - disable: virt:rhel
+  - enable: container-tools:{{ tcib_rhel_modules['container-tools'] | default('2.0') }}
+  - enable: mariadb:{{ tcib_rhel_modules['mariadb'] | default('10.3') }}
+  - enable: virt:{{ tcib_rhel_modules['virt'] | default('8.2') }}
+  - enable: redis:{{ tcib_rhel_modules['redis'] | default('5') }}
 tcib_stopsignal: SIGTERM
