Switch default container prefix to openstack
Change-Id: Ic79b8f83679679d81b17e60d28734a5b9c5fb1b2

--- a/container-images/container_image_prepare_defaults.yaml
+++ b/container-images/container_image_prepare_defaults.yaml
@@ -14,7 +14,7 @@ parameter_defaults:
     set:
       # Container image name components for OpenStack images.
       namespace: docker.io/tripleomaster
-      name_prefix: centos-binary-
+      name_prefix: openstack-
       name_suffix: ''
       tag: current-tripleo
       default_tag: True
