Consume ceph, prom, grafana containers from quay.io
In order to reduce dependency from docker.io. it switched to
the registry url of following containers to quay.io:
ceph - quay.ceph.io/ceph-ci
alertmanager, prometheus and node-exporter - quay.io/prometheus
grafana - quay.io/app-sre

It also updates the ceph daemon image tag from
v4.0.12-stable-4.0-nautilus-centos-7-x86_64
to v4.0.13-stable-4.0-nautilus-centos-7-x86_64.

Change-Id: I8be781e49765cd800f8a10b028ab1574292fdc67
Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>
(cherry picked from commit e6836c5979344ad42176fb09bb5d9b9aad6e5754)

--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -211,15 +211,15 @@ container_images:
   image_source: tripleo
 - imagename: docker.io/tripleou/centos-binary-zaqar-wsgi:current-tripleo
   image_source: tripleo
-- imagename: docker.io/ceph/daemon:v4.0.12-stable-4.0-nautilus-centos-7-x86_64
+- imagename: quay.ceph.io/ceph-ci/daemon:v4.0.13-stable-4.0-nautilus-centos-7-x86_64
   image_source: ceph
-- imagename: docker.io/prom/prometheus:v2.7.2
+- imagename: quay.io/prometheus/prometheus:v2.7.2
   image_source: prom
-- imagename: docker.io/prom/alertmanager:v0.16.2
+- imagename: quay.io/prometheus/alertmanager:v0.16.2
   image_source: prom
-- imagename: docker.io/prom/node-exporter:v0.17.0
+- imagename: quay.io/prometheus/node-exporter:v0.17.0
   image_source: prom
-- imagename: docker.io/grafana/grafana:5.4.3
+- imagename: quay.io/app-sre/grafana:5.4.3
   image_source: grafana
 - imagename: docker.io/tripleou/centos-binary-tempest:current-tripleo
   image_source: tripleo
