Replace cradox with rados
cradox is not maintained anymore, rados is the proper
replacement, e.g used in cinder.

This is transparent for end users, no further action is
required.

Change-Id: I199eb50463d2bc8232c2c6db627bb24ba7bbbb75

--- a/container-images/tcib/base/os/gnocchi-base/gnocchi-base.yaml
+++ b/container-images/tcib/base/os/gnocchi-base/gnocchi-base.yaml
@@ -4,7 +4,7 @@ tcib_actions:
 tcib_packages:
   common:
   - gnocchi-common
-  - python3-cradox
+  - python3-rados
   - python3-eventlet
   - httpd
   - librados2
