Add collectd-libpod-stats to image
This patch adds the installation of collectd-libpod-stats as part of the
collectd image. The package is available in the centos-opstools repo.

Collectd-libpod-stats monitors resource usage of running containers on a
host, specifically those managed by the libpod library.

Upstream: https://github.com/pleimer/collectd-libpod-stats

Change-Id: I22501d522c9353a61830b3b7063f2a91c1a7fc50
Signed-off-by: pleimer <pfbleimer@gmail.com>
(cherry picked from commit 7f190057396e804f52a063ad78ec07ebc98041b5)

--- a/container-images/tcib/base/collectd/collectd.yaml
+++ b/container-images/tcib/base/collectd/collectd.yaml
@@ -24,6 +24,7 @@ tcib_packages:
   - collectd-ipmi
   - collectd-iptables
   - collectd-log_logstash
+  - collectd-libpod-stats
   - collectd-mcelog
   - collectd-memcachec
   - collectd-mysql
