Run tripleo-build-containers-ubi-8 on BuildahBuilder code
When patching the BuildahBuilder, it would be nice to get feedback from
the tripleo-build-containers-ubi-8 job as well, it provides quick
results on how we build the images with Buildah.

Change-Id: I99a05d14373976fb178b8d5822a854ccf786d231
(cherry picked from commit 9848dadc0f5205dd2ef8f29f017480d3b9daf4e2)

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -25,6 +25,11 @@
             dependencies: *deps_unit_lint
             vars:
               build_container_images: true
+        - tripleo-build-containers-ubi-8:
+            dependencies: *deps_unit_lint
+            files:
+              - ^container-images/.*$
+              - ^tripleo_common/image/builder/.*$
         - tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates:
             dependencies: *deps_unit_lint
             files:
