--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -34,6 +34,7 @@
             dependencies: *deps_unit_lint
             files:
               - ^container-images/.*$
+              - ^tripleo_common/image/builder/.*$
         - tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates:
             dependencies: *deps_unit_lint
             files:
