Use the new IPA-builder element for installing python-hardware
Also use quotes for DIB_EPEL_DISABLED as without that it fails
in python2, in ussuri+ releases it's not needed as those are
python3 only.
  

Change-Id: Id75c11e5b7c4f3bf73c962bc7e46f5a6021efc5f
Depends-On: https://review.opendev.org/#/c/753966/
(cherry picked from commit be437cb1e341c437ddd8d6901ce107982bb808df)

--- a/image-yaml/overcloud-images.yaml
+++ b/image-yaml/overcloud-images.yaml
@@ -51,9 +51,9 @@ disk_images:
       - network-gateway
       - enable-packages-install
       - override-pip-and-virtualenv
-    packages:
-      - python-hardware-detect
+      - extra-hardware
     options:
       - "--min-tmpfs=7"
     environment:
+      DIB_EPEL_DISABLED: '1'
       DIB_PYTHON_VERSION: '2'
