Change image_source from kolla to tripleo
The neutron-metadata-agent container image
is not getting build as [1] changed it's type to kolla..
Here changing the image_source method from kolla
to tripleo.

[1]: https://review.opendev.org/#/c/748691/7

Change-Id: I29b8db77ecae71cc7535e6a1506a8452b8420e2a
Closes-Bug: https://bugs.launchpad.net/tripleo/+bug/1897228

--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -113,7 +113,7 @@ container_images:
   imagename: docker.io/tripleotrain/centos-binary-neutron-dhcp-agent:current-tripleo
 - image_source: tripleo
   imagename: docker.io/tripleotrain/centos-binary-neutron-l3-agent:current-tripleo
-- image_source: kolla
+- image_source: tripleo
   imagename: docker.io/tripleotrain/centos-binary-neutron-metadata-agent:current-tripleo
 - image_source: tripleo
   imagename: docker.io/tripleotrain/centos-binary-neutron-mlnx-agent:current-tripleo
