[TRAIN ONLY] Handle empty role Specific Parameter
Having empty role specific parameters will fail the deployment as
mistral workflow YAQL expression fails.

Change-Id: I688de151c654a19003397adacf07ae67f66001a7
Closes-Bug: #1900810

--- a/workbooks/plan_management.yaml
+++ b/workbooks/plan_management.yaml
@@ -618,7 +618,7 @@ workflows:
         concurrency: 1
         action: std.echo output=<% "{}Parameters".format($.role_name) %>
         publish:
-          user_provided_role_specific: <% let(param => task().result) -> $.user_params.items().where( $param.contains($[0]) ).select( $[1] ).flatten() %>
+          user_provided_role_specific: <% let(param => task().result) -> $.user_params.items().where( $param.contains($[0]) and $[1] != null ).select( $[1] ).flatten() %>
 
       is_user_role_specific_input_provided:
         on-success:
