Update the ceph container url to quay.io
In order to get rid of pulling non-tripleo containers from docker.io
to avoid rate limit issues, we are switching to
quay.ceph.io/ceph-ci/daemon:v4.0.13-stable-4.0-nautilus-centos-7-x86_64.

Change-Id: If5a5c231a45bcd281a937564fc406e050c4b2976
Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>

--- a/container-images/container_image_prepare_defaults.yaml
+++ b/container-images/container_image_prepare_defaults.yaml
@@ -25,9 +25,9 @@ parameter_defaults:
 
       # Container image name components for Ceph images.
       # Only used if Ceph is deployed.
-      ceph_namespace: docker.io/ceph
+      ceph_namespace: quay.ceph.io/ceph-ci
       ceph_image: daemon
-      ceph_tag: v4.0.12-stable-4.0-nautilus-centos-7-x86_64
+      ceph_tag: v4.0.13-stable-4.0-nautilus-centos-7-x86_64
 
       # Container image name components for OpenShift images.
       # Only used if OpenShift is deployed.
