Update the ceph container url to quay.io
In order to get rid of pulling non-tripleo containers from docker.io
to avoid rate limit issues, we are switching to
quay.ceph.io/ceph-ci/daemon:v3.2.14-stable-3.2-luminous-centos-7-x86_64

Depends-On: https://review.opendev.org/#/c/759211/

Change-Id: Ib573484a52548414a8804c5c514538b69a8e7ee0
Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>

--- a/container-images/container_image_prepare_defaults.yaml
+++ b/container-images/container_image_prepare_defaults.yaml
@@ -25,7 +25,7 @@ parameter_defaults:
 
       # Container image name components for Ceph images.
       # Only used if Ceph is deployed.
-      ceph_namespace: docker.io/ceph
+      ceph_namespace: quay.ceph.io/ceph-ci
       ceph_image: daemon
       ceph_tag: v3.2.14-stable-3.2-luminous-centos-7-x86_64
 
