--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ Jinja2>=2.10 # BSD License (3 clause)
 python-novaclient>=9.1.0 # Apache-2.0
 passlib>=1.7.0 # BSD
 netifaces>=0.10.4 # MIT
-paramiko>=2.7.1 # LGPLv2.1+
+cryptography>=3.4.7 # BSD/Apache-2.0
 netaddr>=0.7.18 # BSD
 python-zaqarclient>=1.0.0 # Apache-2.0
 python-keystoneclient>=3.8.0 # Apache-2.0
