--- a/container-images/tcib/base/os/heat-base/heat-engine/heat-engine.yaml
+++ b/container-images/tcib/base/os/heat-base/heat-engine/heat-engine.yaml
@@ -1,5 +1,6 @@
 tcib_actions:
 - run: dnf -y install {{ tcib_packages['common'] | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
+- run: ln -s /usr/share/openstack-tripleo-common/healthcheck/heat-engine /openstack/healthcheck && chmod a+rx /openstack/healthcheck
 tcib_packages:
   common:
   - openstack-heat-engine
